--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 YouTube
             </button>
-            <button class="" onclick="window.location.href='https://www.vimeo.com/';"><i class="fa fa-twitch"
+            <button class="" onclick="window.location.href='https://www.twitch.tv/';"><i class="fa fa-twitch"
                                                                                          aria-hidden="true"></i>
 
                 Twitch
