Added SteamGrid folder + other fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>DeckHub - Hub to Streaming</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/icon.png"/>
+    <link rel="icon" href="steamgrid/icon.png"/>
     <script src="https://kit.fontawesome.com/c7b1d33b1c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -104,7 +104,7 @@
         <div class="buttons">
             <button class="" onclick="window.location.href='https://www.moviesjoy.to/home';"><i class="fa fa-film"
                                                                                                 aria-hidden="true"></i>
-                Moviesjoy
+                MoviesJoy
             </button>
         </div>
 
