GitHub Link no longer opens in blank page, allowing the steam deck to go back to the Home-page.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <footer>
     <div>Made by: Frietvorkje69</div>
     <div>
-        <a href="https://github.com/frietvorkje69/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="https://github.com/frietvorkje69/"><i class="fa fa-github" aria-hidden="true"></i></a>
     </div>
     <div>2023</div>
 </footer>
