--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
                                                                                                 aria-hidden="true"></i>
                 MoviesJoy
             </button>
+            <button class="" onclick="window.location.href='https://www.allkeyshop.com/';"><i class="fa fa-key" aria-hidden="true"></i>
+
+
+                AKS
+            </button>
         </div>
+
 
     </section>
 
