--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
         <hr>
 
         <div class="buttons">
-            <button class="" onclick="window.location.href='https://www.9anime.to/home';">
-                9anime
+            <button class="" onclick="window.location.href='https://aniwave.to/home';">
+                AniWave
             </button>
             <button class="" onclick="window.location.href='https://www.animension.to/';">
                 Animension
             </button>
-            <button class="" onclick="window.location.href='https://www.zoro.to/home';">
-                Zoro
+            <button class="" onclick="window.location.href='https://hianime.to/home';">
+                HiAnime
             </button>
         </div>
 
@@ -102,14 +102,14 @@
         <hr>
 
         <div class="buttons">
-            <button class="" onclick="window.location.href='https://www.moviesjoy.to/home';"><i class="fa fa-film"
+            <button class="" onclick="window.location.href='https://moviesjoy.is/home';"><i class="fa fa-film"
                                                                                                 aria-hidden="true"></i>
                 MoviesJoy
             </button>
-            <button class="" onclick="window.location.href='https://www.allkeyshop.com/';"><i class="fa fa-key" aria-hidden="true"></i>
+            <button class="" onclick="window.location.href='https://movies7.to/home';"><i class="fa fa-film" aria-hidden="true"></i>
 
 
-                AKS
+                Movies7
             </button>
         </div>
 
