--- a/index.html
+++ b/index.html
@@ -67,14 +67,18 @@
             <button class="" onclick="window.location.href='https://aniwave.to/home';">
                 AniWave
             </button>
-            <button class="" onclick="window.location.href='https://www.animension.to/';">
-                Animension
-            </button>
             <button class="" onclick="window.location.href='https://hianime.to/home';">
                 HiAnime
             </button>
         </div>
-
+        <div class="buttons">
+         <button class="" onclick="window.location.href='https://animeflix.live';">
+                Animeflix
+            </button>
+            <button class="" onclick="window.location.href='https://www.animension.to/';">
+                Animension
+            </button>
+        </div>
     </section>
 
     <section id="misc" class="borderedSection">
