--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="py-12">
         <div class="flex justify-between items-center">
-            <a href="/" class="flex items-center"> <img src="img/logo.png" alt="DeckHub" class="h-12">  </a>
+            <a href="#" class="flex items-center"> <img src="img/logo.png" alt="DeckHub" class="h-12">  </a>
             <a href="https://github.com/Frietvorkje69/DeckHub" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">GitHub</a>
         </div>
 
