--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 }
             });
             renderCards(sortedServices);
+            applyFilterPreferences();
         }
 
         function renderCards(servicesToDisplay) {
@@ -254,7 +255,7 @@
                 filterOptions.appendChild(div);
             });
         }
-        
+
         function isServiceHidden(serviceName) {
             const preferences = JSON.parse(localStorage.getItem('filterPreferences')) || {};
             return preferences[serviceName] === false;
