updated color text

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="mt-4 flex justify-center items-right">
                 <div class="px-4 py-2 flex items-center">
                     <span class="h-4 w-4 bg-blue-500 rounded-full mr-2"></span>
-                    <span class="text-zinc-900 dark:text-white">Legal</span>
+                    <span class="text-white">Legal</span>
                 </div>
                 <div class="px-4 py-2 flex items-center">
                     <span class="h-4 w-4 bg-red-500 rounded-full mr-2"></span>
-                    <span class="text-zinc-900 dark:text-white">Illegal</span>
+                    <span class="text-white">Illegal</span>
                 </div>
             </div>
         </div>
