font-change (body)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>DeckHub - Your Streaming Hub</title>
     <link rel="icon" href="img/icon.png"/>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+        body {
+            font-family: 'Nunito', sans-serif;
+        }
+    </style>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="dark:bg-zinc-800 bg-gradient-to-b from-purple-900 to-black min-h-screen">
@@ -200,7 +206,7 @@
                 badge.classList.add(`bg-${service.status === 'legal' ? 'blue-500' : 'red-500'}`, 'rounded-full', 'px-4', 'py-2');
                 const stitle = document.createElement('p');
                 stitle.textContent = service.name;
-                stitle.classList.add('text-lg', 'font-medium', 'text-white');
+                stitle.classList.add('text-lg', 'font-bold', 'text-white');
                 badge.appendChild(stitle);
 
                 card.appendChild(badge);
