Ensure overlay is never bigger than screen size

--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
             display: flex; /* Arrange categories horizontally */
             flex-wrap: wrap; /* Allow wrapping if needed */
             gap: 20px; /* Spacing between categories */
+            max-width: 100vw;
         }
 
-        /* Individual category styles */
-        .category {
-            flex: 0 0 calc(25% - 15px); /* Distribute space equally, adjust as needed */
-            box-sizing: border-box; /* Include padding and border in width calculation */
-        }
+        
     </style>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
