--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="py-12">
         <div class="flex justify-between items-center">
             <a href="#" class="flex items-center"> <img src="src/img/logo.png" alt="DeckHub" class="h-12">  </a>
-            <button id="filterButton" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">Filter</button>        </div>
+            <button id="filterButton" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">Filter</button>
+            <button id="addServiceButton" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">Add Site</button>        </div>
 
         <div class="mt-4 flex justify-between items-center">
             <div>
@@ -65,6 +66,29 @@
         </div>
     </div>
 </div>
+
+<div id="addServiceOverlay" class="fixed inset-0 bg-gray-900 bg-opacity-50 z-50 hidden flex items-center justify-center">
+    <div class="bg-gray-800 rounded-lg overflow-hidden w-96 shadow-xl" style="width: fit-content;">
+        <div class="flex justify-between items-center px-4 py-2 bg-purple-800 text-white">
+            <h2 class="text-lg font-semibold">Add a New Service</h2>
+            <button id="closeAddServiceOverlay" class="text-white">&times;</button>
+        </div>
+        <div class="p-4">
+            <form id="addServiceForm" class="flex flex-col space-y-2">
+                <input type="text" id="serviceName" placeholder="Service Name" class="p-2 rounded border border-gray-300">
+                <input type="text" id="serviceLink" placeholder="Service Link" class="p-2 rounded border border-gray-300">
+                <input type="text" id="serviceImage" placeholder="Service Image URL" class="p-2 rounded border border-gray-300">
+                <select id="serviceStatus" class="p-2 rounded border border-gray-300">
+                    <option value="legal">Legal</option>
+                    <option value="illegal">Illegal</option>
+                </select>
+                <input type="text" id="serviceCategory" placeholder="Service Category" class="p-2 rounded border border-gray-300">
+                <button type="submit" class="px-4 py-2 bg-purple-700 text-white rounded hover:bg-purple-800 transition-colors">Add Service</button>
+            </form>
+        </div>
+    </div>
+</div>
+
 <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
