Let users add their own custom sites.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
 <body class="dark:bg-zinc-800 bg-gradient-to-b from-purple-900 to-black min-h-screen">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="py-12">
-        <div class="flex justify-between items-center">
+        <div class="flex justify-between items-center space-x-4">
             <a href="#" class="flex items-center"> <img src="src/img/logo.png" alt="DeckHub" class="h-12">  </a>
-            <button id="filterButton" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">Filter</button>
-            <button id="addServiceButton" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">Add Site</button>        </div>
+            <div class="relative">
+                <button id="dropdownButton" class="px-4 py-2 text-white rounded bg-gradient-to-r from-transparent to-purple-700 transition-colors hover:bg-purple-700">Settings</button>
+                <div id="dropdownMenu" class="absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-gray-800 ring-1 ring-black ring-opacity-5 hidden">
+                    <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
+                        <button id="filterButton" class="block w-full px-4 py-2 text-left text-sm text-white hover:bg-gray-700" role="menuitem">Filter</button>
+                        <button id="addServiceButton" class="block w-full px-4 py-2 text-left text-sm text-white hover:bg-gray-700"" role="menuitem">Add Site</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <div class="mt-4 flex justify-between items-center">
             <div>
@@ -75,14 +84,14 @@
         </div>
         <div class="p-4">
             <form id="addServiceForm" class="flex flex-col space-y-2">
-                <input type="text" id="serviceName" placeholder="Service Name" class="p-2 rounded border border-gray-300">
-                <input type="text" id="serviceLink" placeholder="Service Link" class="p-2 rounded border border-gray-300">
-                <input type="text" id="serviceImage" placeholder="Service Image URL" class="p-2 rounded border border-gray-300">
+                <input type="text" id="serviceName" placeholder="Name" class="p-2 rounded border border-gray-300">
+                <input type="text" id="serviceLink" placeholder="Link" class="p-2 rounded border border-gray-300">
+                <input type="text" id="serviceImage" placeholder="Image URL" class="p-2 rounded border border-gray-300">
                 <select id="serviceStatus" class="p-2 rounded border border-gray-300">
                     <option value="legal">Legal</option>
                     <option value="illegal">Illegal</option>
                 </select>
-                <input type="text" id="serviceCategory" placeholder="Service Category" class="p-2 rounded border border-gray-300">
+                <input type="text" id="serviceCategory" placeholder="Category" class="p-2 rounded border border-gray-300">
                 <button type="submit" class="px-4 py-2 bg-purple-700 text-white rounded hover:bg-purple-800 transition-colors">Add Service</button>
             </form>
         </div>
