--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <input type="text" id="serviceLink" placeholder="Link" class="p-2 rounded border border-gray-300">
                 <input type="text" id="serviceImage" placeholder="Image URL" class="p-2 rounded border border-gray-300">
                 <select id="serviceStatus" class="p-2 rounded border border-gray-300">
-                    <option value="legal">Official</option>
-                    <option value="illegal">Unofficial</option>
+                    <option value="Official">Official</option>
+                    <option value="Unofficial">Unofficial</option>
                 </select>
                 <input type="text" id="serviceCategory" placeholder="Category" class="p-2 rounded border border-gray-300">
                 <button type="submit" class="px-4 py-2 bg-purple-700 text-white rounded hover:bg-purple-800 transition-colors">Add Service</button>
